Bug 399727: Deflate stream converter produces raw deflate data rather than zlib compressed data. r=biesi a=schrep