modules/libjar/zipwriter/src/ZipWriterModule.cpp
@@ -48,7 +48,25 @@ static nsModuleComponentInfo components[] =
   {
     DEFLATECONVERTER_CLASSNAME,
     DEFLATECONVERTER_CID,
-    DEFLATECONVERTER_CONTRACTID,
+    "@mozilla.org/streamconv;1?from=uncompressed&to=deflate",
+    nsDeflateConverterConstructor,
+  },
+  {
+    DEFLATECONVERTER_CLASSNAME,
+    DEFLATECONVERTER_CID,
+    "@mozilla.org/streamconv;1?from=uncompressed&to=gzip",
+    nsDeflateConverterConstructor,
+  },
+  {
+    DEFLATECONVERTER_CLASSNAME,
+    DEFLATECONVERTER_CID,
+    "@mozilla.org/streamconv;1?from=uncompressed&to=x-gzip",
+    nsDeflateConverterConstructor,
+  },
+  {
+    DEFLATECONVERTER_CLASSNAME,
+    DEFLATECONVERTER_CID,
+    "@mozilla.org/streamconv;1?from=uncompressed&to=rawdeflate",
     nsDeflateConverterConstructor,
   },
   {
